[package]
name = "windows-volume-control"
version = "0.2.0"
homepage = "https://github.com/zmconnelly/windows-volume-control"
documentation = "https://docs.rs/windows-volume-control"
repository = "https://github.com/zmconnelly/windows-volume-control"
readme = "README.md"
description = "A simple library to control audio interfaces from within rust using the windows api. Forked from https://github.com/Waayway/windows-volume-control."
edition = "2021"
license = "MIT"

[dependencies]
windows = { version = "0.58.0", features = [
    "implement",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
] }
